--- a/Resources/Views/TableCells/AccountSubCell.xib
+++ b/Resources/Views/TableCells/AccountSubCell.xib
@@ -44,7 +44,7 @@
 							<object class="IBUILabel" id="989923002">
 								<reference key="NSNextResponder" ref="829312368"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 23}, {260, 21}}</string>
+								<string key="NSFrame">{{58, 23}, {222, 21}}</string>
 								<reference key="NSSuperview" ref="829312368"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -61,7 +61,7 @@
 							<object class="IBUILabel" id="500622071">
 								<reference key="NSNextResponder" ref="829312368"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{19, 4}, {160, 15}}</string>
+								<string key="NSFrame">{{58, 4}, {222, 15}}</string>
 								<reference key="NSSuperview" ref="829312368"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -187,7 +187,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>UIResponder</string>
 					<string>AccountSubCell</string>
-					<string>{{992, 593}, {320, 55}}</string>
+					<string>{{1064, 656}, {320, 55}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -286,6 +286,13 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/Views/SegmentedListPicker.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/Views/TouchImageView.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
